--- a/Agent/CMakeLists.txt
+++ b/Agent/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required( VERSION 3.23 )
-project( Talon C )
+project( Revenant C )
 
 set( CMAKE_C_STANDARD 99 )
 set( CMAKE_C_COMPILER x86_64-w64-mingw32-gcc )
 
+set(CMAKE_C_COMPILER)
 include_directories( Include )
 
 add_executable( Agent
@@ -14,3 +15,6 @@ add_executable( Agent
     Source/Transport.c
     Source/Parser.c
 )
+
+set_source_files_properties(Main.c PROPERTIES COMPILE_FLAGS "-Wincompatible-pointer-types")
+target_link_libraries( Agent ws2_32 kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 iphlpapi winhttp)
