Cleaned up Revenant.py and fixed a few typos

--- a/Agent/makefile
+++ b/Agent/makefile
@@ -23,4 +23,4 @@ all:
 	# TODO: remove exe. lasting is going to be Dll and Reflective Dll
 	$(CCX64) $(SOURCE) $(INCLUDE) $(CFLAGS) $(LINKING) -m64 -o Bin/Revenant.exe
 
-	printf "\033[0;36m[*]\033[0m Finished building Revanent payload\n"
+	printf "\033[0;36m[*]\033[0m Finished building Revenant payload\n"
