More string obfuscation

--- a/Agent/CMakeLists.txt
+++ b/Agent/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.23)
 project(Revenant C)
 
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Ofast -s")
 
 include_directories(Include)
 
