--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if(WIN32)
         SET(NASM_OBJECTS ${NASM_OBJECTS} ${NASM_OBJ})
     ENDFOREACH(src)
 
-    add_executable(Revenant ${NASM_OBJECTS} Agent/Source/Main.c Agent/Source/Command.c Agent/Source/Core.c Agent/Source/Package.c Agent/Source/Parser.c Agent/Source/Transport.c Agent/Source/Obfuscation.c Agent/Source/Utilities.c Agent/Source/AntiDebug.c)
+    add_executable(Revenant ${NASM_OBJECTS} Agent/Source/Main.c Agent/Source/Command.c Agent/Source/Core.c Agent/Source/Package.c Agent/Source/Parser.c Agent/Source/Transport.c Agent/Source/Obfuscation.c Agent/Source/Utilities.c Agent/Source/AntiDebug.c Agent/Source/Poly.c)
     target_compile_options(Revenant PRIVATE -s -O3 -masm=intel -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-incompatible-pointer-types -Wno-int-conversion)
     target_link_options(Revenant PRIVATE -s -O3)
     target_link_libraries(Revenant ws2_32 kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 iphlpapi winhttp)
@@ -54,10 +54,10 @@ else()
                 COMMAND nasm -f win64 -o ${NASM_OBJ} ${NASM_SRC}
                 DEPENDS ${NASM_SRC}
                 COMMENT "Assembling ${NASM_SRC}")
-        SET(NASM_OBJECTS ${NASM_OBJECTS} ${NASM_OBJ})
+        SET(NASM_OBJECTS ${NASM_OBJECTS} ${NASM_OBJ} Agent/Source/Poly.c)
     ENDFOREACH(src)
 
-    add_executable(Revenant ${NASM_OBJECTS} Agent/Source/Main.c Agent/Source/Command.c Agent/Source/Core.c Agent/Source/Package.c Agent/Source/Parser.c Agent/Source/Transport.c Agent/Source/Obfuscation.c Agent/Source/Utilities.c Agent/Source/AntiDebug.c)
+    add_executable(Revenant ${NASM_OBJECTS} Agent/Source/Main.c Agent/Source/Command.c Agent/Source/Core.c Agent/Source/Package.c Agent/Source/Parser.c Agent/Source/Transport.c Agent/Source/Obfuscation.c Agent/Source/Utilities.c Agent/Source/AntiDebug.c Agent/Source/Poly.c)
     target_compile_options(Revenant PRIVATE -s -O0 -masm=intel -mwindows -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-incompatible-pointer-types -Wno-int-conversion)
     target_link_options(Revenant PRIVATE -mwindows -s -O3)
     target_link_libraries(Revenant ws2_32 kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 iphlpapi winhttp)
