--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ if(WIN32)
         include_directories(${CMAKE_SOURCE_DIR}/Agent/Include)
 
         add_executable(Revenant Agent/Source/Main.c Agent/Source/Command.c Agent/Source/Core.c Agent/Source/Package.c Agent/Source/Parser.c Agent/Source/Transport.c Agent/Source/Obfuscation.c Agent/Source/Utilities.c Agent/Source/AntiDebug.c Agent/Source/Poly.c Agent/Source/Asm.c)
-        target_compile_options(Revenant PRIVATE -O3  -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-incompatible-pointer-types -Wno-int-conversion -Wno-pointer-sign)  # Use the 32-bit compiler options
+        target_compile_options(Revenant PRIVATE -O3 -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-incompatible-pointer-types -Wno-int-conversion -Wno-pointer-sign)  # Use the 32-bit compiler options
         target_link_options(Revenant PRIVATE -s -O3)  # Use the 32-bit linker options
         target_link_libraries(Revenant ws2_32 kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 iphlpapi winhttp)
 
@@ -55,15 +55,15 @@ else()
 
         set(CMAKE_C_STANDARD 99)
 
-        set(CMAKE_C_COMPILER /usr/bin/x86_64-w64-mingw32-gcc)
-        set(CMAKE_CXX_COMPILER /usr/bin/x86_64-w64-mingw32-g++)
+        set(CMAKE_C_COMPILER ./llvm-mingw/bin/x86_64-w64-mingw32-gcc)
+        set(CMAKE_CXX_COMPILER ./llvm-mingw/bin/x86_64-w64-mingw32-g++)
         set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Agent/Bin/x64)
 
         include_directories(${CMAKE_SOURCE_DIR}/Agent/Include)
 
 
         add_executable(Revenant Agent/Source/Main.c Agent/Source/Command.c Agent/Source/Core.c Agent/Source/Package.c Agent/Source/Parser.c Agent/Source/Transport.c Agent/Source/Obfuscation.c Agent/Source/Utilities.c Agent/Source/AntiDebug.c Agent/Source/Poly.c Agent/Source/Asm.c)
-        target_compile_options(Revenant PRIVATE -s -O0 -masm=intel -mwindows -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-incompatible-pointer-types -Wno-int-conversion)
+        target_compile_options(Revenant PRIVATE -O3 -mwindows -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-inline-asm -Wno-incompatible-pointer-types -Wno-int-conversion -Wno-pointer-sign)
         target_link_options(Revenant PRIVATE -mwindows -s -O3)
         target_link_libraries(Revenant ws2_32 kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 iphlpapi winhttp)
 
@@ -75,14 +75,14 @@ else()
 
         set(CMAKE_C_STANDARD 99)
 
-        set(CMAKE_C_COMPILER /usr/bin/i686-w64-mingw32-gcc)
-        set(CMAKE_CXX_COMPILER /usr/bin/i686-w64-mingw32-g++)
+        set(CMAKE_C_COMPILER ./llvm-mingw/bin/i686-w64-mingw32-gcc)
+        set(CMAKE_CXX_COMPILER ./llvm-mingw/bin/i686-w64-mingw32-g++)
         set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Agent/Bin/x86)
 
         include_directories(${CMAKE_SOURCE_DIR}/Agent/Include)
 
         add_executable(Revenant Agent/Source/Main.c Agent/Source/Command.c Agent/Source/Core.c Agent/Source/Package.c Agent/Source/Parser.c Agent/Source/Transport.c Agent/Source/Obfuscation.c Agent/Source/Utilities.c Agent/Source/AntiDebug.c Agent/Source/Poly.c Agent/Source/Asm.c)
-        target_compile_options(Revenant PRIVATE -s -O0 -masm=intel -mwindows -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-incompatible-pointer-types -Wno-int-conversion)
+        target_compile_options(Revenant PRIVATE -O3 -mwindows -fdata-sections -Wno-implicit-function-declaration -Wno-multichar -Wno-inline-asm -Wno-incompatible-pointer-types -Wno-int-conversion -Wno-pointer-sign)
         target_link_options(Revenant PRIVATE -mwindows -s -O3)
         target_link_libraries(Revenant ws2_32 kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 iphlpapi winhttp)
 
